fix overflow-x hiden boddy

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,7 +1,7 @@
 body {
-    padding: 0;
-    margin: 0;
     overflow-x: hidden;
+    margin: 0;
+    padding: 0;
 }
 
 html {
@@ -683,18 +683,18 @@ form {
 
 @media screen and (max-width: 860px) {
 
-    body {
-        overflow-x: hidden;
+    ::-webkit-scrollbar {
+        display: none;
     }
 
-    html {
+    html,body{
         overflow-x: hidden;
     }
     
     .btn-togglez {
         right: 0px;
         z-index: 555;
-        width: 120px;
+        width: max-content;
         height: max-content;
         display: block;
         cursor: pointer;
@@ -715,13 +715,13 @@ form {
     .section1 {
         width: 100vw;
         height: 480px;
-        overflow: hidden;
+        overflow-x: hidden;
         z-index: -1;
         background-color: black;
     }
     
     .carousel {
-        height: 130vh;
+        height: max-content;
         overflow: hidden;
     }
     
@@ -960,6 +960,7 @@ form {
         width: 100vw;
         height: max-content;
         margin-top: -30px;
+        overflow-x: hidden;
     }
 
     .wrap-section2 {
@@ -1034,6 +1035,7 @@ form {
         position: relative;
         width: 100vw;
         margin-top: 35px;
+        overflow-x: hidden;
         height: max-content;
     }
 
@@ -1160,6 +1162,7 @@ form {
         position: relative;
         width: 100vw;
         padding-top: 50px;
+        overflow-x: hidden;
         padding-bottom: 30px;
         height: max-content;
         margin-top: 40px;
@@ -1252,6 +1255,7 @@ form {
         position: relative;
         width: 100vw;
         padding-bottom: 0px;
+        overflow-x: hidden;
         min-height: 560px;
         padding-top: 20px;
     }
@@ -1449,7 +1453,7 @@ form {
     }
 
     .footer input {
-        width: 87vw;
+        width: 86%;
         height: 48px;
         margin-bottom: 12px;
         margin-top: 50px;
@@ -1461,7 +1465,7 @@ form {
     }
 
     .footer textarea {
-        width: 87vw;
+        width: 86%;
         height: 128px;
         margin-bottom: 12px;
         border: 1px solid #FFFFFF;
